# PuppyGit

./: .gitignore  .gitmodules  CHANGELOG.md  DONE.md  FAQ.md  Git24j_ChangeLog.md  GooglePlayIsShit.md  README.md  README_CN.md  TODO.md  ai给的git-lfs方案-20260523.md  automation_doc.md  build.gradle.kts  coding_journal.md  donate.md  http_service_api.md  hunk_header_format.md  if_got_VerifyError.md  known_bugs.md  known_hosts_format.md  memo.md  new_strings.md  tranlations.txt  自定义页面状态存储器的修改-20250428.md
.github/: FUNDING.yml
app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
app/schemas/com.catpuppyapp.puppygit.data.AppDatabase/: 24.json  25.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/samples/: htmlsample.txt
app/src/main/assets/textmate/: languages.json  solarized_dark.json  solarized_light.json
app/src/main/assets/textmate/c/: language-configuration.json
app/src/main/assets/textmate/csharp/: language-configuration.json
app/src/main/assets/textmate/go/: language-configuration.json
app/src/main/assets/textmate/groovy/: language-configuration.json
app/src/main/assets/textmate/handlebars/: language-configuration.json
app/src/main/assets/textmate/javascript/: javascriptreact.language-configuration.json
app/src/main/assets/textmate/jikespg/: language-configuration.json
app/src/main/assets/textmate/json/: language-configuration.json
app/src/main/jni/src/: lfs_register.c  lfs_register.h  libgit_two.c  ppgit_libgit_two.c
app/src/main/res/drawable/: baseline_close_24.xml  baseline_content_copy_24.xml  dark_icon_circle_small.xml  dog_head.xml  git_rebase.xml  icon_dark_foreground.xml  icon_light_foreground.xml  icon_monochrome.xml  light_icon_circle_small.xml  outline_keyboard_off_24.xml  outline_nutrition_24.xml  outline_reopen_window_24.xml  outline_unknown_document_24.xml  splash_icon.xml  two_way_sync.xml
app/src/main/res/drawable-night/: splash_icon.xml
app/src/main/res/mipmap/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/mipmap-anydpi-v26/: icon_dark_round.xml  icon_light.xml  icon_light_round.xml
app/src/main/res/mipmap-night/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/raw/: known_hosts
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  icon_dark_background.xml  icon_light_background.xml  strings.xml  themes.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-bn/: strings.xml
app/src/main/res/values-night/: colors.xml  ic_launcher_background.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-v31/: themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: accessibility_service_config.xml  file_paths.xml  network_security_config.xml
(+939 files in other folders)
